# activity-log-mcp

./: .gitignore  README.md  pyproject.toml
src/activity_log_mcp/: __init__.py  main.py  server.py
tests/: test_server.py
